made adding favorites more user friendly, fixed nutrition label not fitting in container

--- a/style.css
+++ b/style.css
@@ -84,11 +84,18 @@ body {
 }
 
 #add-favorite{
-    font-size: 14pt;
+    /* font-size: 14pt; */
     cursor: pointer;
 }
 
+#add-favorite:hover::after{
+    content:" ~ Add to Favorites";
+    opacity: 50%;
+    font-size: 13pt;
+}
+
 .favorites-link{
-    color: purple;
+    color: rgb(76, 76, 235);
     cursor: pointer;
 }
+
